--- a/various/parapoxvirus_simulation_old/Makefile
+++ b/various/parapoxvirus_simulation_old/Makefile
@@ -1,6 +1,6 @@
 #COMPILER OPTIONS
-CFLAGS := -g -std=c++11 # -Wall
-CC := mpicxx
+CFLAGS := -g -Wall -O3 -cc=icc
+CC := mpicc
 
 #DIRECTORIES
 BASE_DIR := .
@@ -11,17 +11,17 @@ EXE_DIR := $(BASE_DIR)
 ACTOR_DIR := ../actor_framework
 
 #FILES
-SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
-OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp, $(BUILD_DIR)/%.o, $(SRC_FILES))
+SRC_FILES := $(wildcard $(SRC_DIR)/*.c)
+OBJ_FILES := $(patsubst $(SRC_DIR)/%.c, $(BUILD_DIR)/%.o, $(SRC_FILES))
 EXE := $(EXE_DIR)/parapoxvirus_simulation
 
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
+$(BUILD_DIR)/%.o: $(SRC_DIR)/%.c $(HEADER_DIR)/%.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 parapoxvirus_simulation:
 	@echo " Creating parapoxvirus_simulation executable..."
 	make $(OBJ_FILES)
-	$(CC) -o $@ $(OBJ_FILES) $^
+	@$(CC) $(CFLAGS) -o $@ $(OBJ_FILES) $^
 
 clean:
 	@echo " Cleaning..."
